# stark-stir-fips

./: README.md
stark-stir-fips-security/: .gitignore  Cargo.toml  run-explicit-merge-sweep.sh  run-k4-sweep-rate32.sh  run-k4-sweep.sh  run-k4-sweep.sh.bak  run-stir-halve-ext-sweep.sh  run-stir-halve-full-ext-fri-sweep.sh  run-stir-halve-full-ext-sweep.sh  run-stir-halve-sweep.sh
stark-stir-fips-security/.claude-flow/data/: pending-insights.jsonl
stark-stir-fips-security/.claude-flow/sessions/: current.json  session-1781170332653.json  session-1781188597495.json  session-1781284344453.json  session-1781611204597.json
stark-stir-fips-security/aws-bench-package/: AWS-RUNBOOK.md  channel-Cargo.toml  end_to_end.rs  k4-bench.patch
stark-stir-fips-security/crates/channel/: Cargo.toml  benchmarkdata.csv
stark-stir-fips-security/crates/channel/benches/: end_to_end.rs  multi_air_end_to_end.rs  simple_recursion.rs
stark-stir-fips-security/crates/deep_ali/: Cargo.toml
stark-stir-fips-security/crates/deep_ali/.claude-flow/data/: pending-insights.jsonl
stark-stir-fips-security/crates/deep_ali/examples/: ecdsa_p256_bench.rs  ed25519_bench.rs  mldsa_v2_bench.rs  rho_sweep.rs  rsa2048_bench.rs
stark-stir-fips-security/crates/deep_ali/examples/.claude-flow/data/: pending-insights.jsonl
stark-stir-fips-security/crates/deep_ali/src/: air_workloads.rs  binding_cells_commit.rs  cubic_ext.rs  explicit_merge.rs  explicit_merge_air.rs  explicit_merge_layer0.rs  explicit_merge_ood_check.rs  explicit_merge_prove.rs  explicit_merge_verify.rs  fri.rs  keccak_f1600.rs  keccak_f1600_air.rs  lib.rs  merge_wrappers.rs  ml_dsa.rs  ml_dsa_codec.rs  ml_dsa_decompose.rs  ml_dsa_decompose_air.rs  ml_dsa_expand_a_one_lite.rs  ml_dsa_field.rs  ml_dsa_field_air.rs  ml_dsa_intt_via_t7.rs  ml_dsa_norm_check.rs  ml_dsa_norm_check_air.rs  ml_dsa_ntt.rs  ml_dsa_ntt_air.rs  ml_dsa_ntt_chained_air.rs  ml_dsa_rej_chunk_air.rs  ml_dsa_rej_count_air.rs  ml_dsa_sample_in_ball.rs  ml_dsa_sample_in_ball_t1_t2.rs  ml_dsa_shake_absorb_air.rs  ml_dsa_shake_absorb_multi_air.rs  ml_dsa_shake_squeeze_air.rs  ml_dsa_transcript.rs  ml_dsa_use_hint_air.rs  ml_dsa_verify_air.rs  ml_dsa_verify_air_v15.rs  ml_dsa_verify_air_v17.rs  ml_dsa_verify_air_v2_layout.rs  (+16 more)
stark-stir-fips-security/crates/deep_ali/src/.claude-flow/data/: pending-insights.jsonl
stark-stir-fips-security/crates/deep_ali/tests/: explicit_merge_e2e.rs  explicit_merge_soundness.rs
stark-stir-fips-security/crates/merkle/: Cargo.toml
stark-stir-fips-security/crates/merkle/src/: lib.rs
stark-stir-fips-security/scripts/: bench-all-signatures.sh  bench-ml-dsa-rollup.sh  csv-to-paper-tex.py  plot-sweep.py  regenerate-paper-tables.sh  sweep-arity-blowup.sh
stark-stir-fips-security/scripts/results/: sweep.csv
