[workspace]
members = [
    "crates/field",
    "crates/utils",
    "crates/fft",
    "crates/poly",
    "crates/poseidon",
    "crates/hash",
    "crates/merkle",
    "crates/bench",
    "crates/transcript",
    "crates/mle",
    "crates/commitment",
    "crates/channel",
    "crates/deep_ali",
    "crates/ark-goldilocks",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
ark-ff = { version = "0.4.2" }
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-poly = "0.4.2"
blake3 = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
criterion = "0.5"
ark-goldilocks = { path = "./crates/ark-goldilocks", version = "0.1.0" }
sha3 = "0.10"
digest = "0.10"
# P6.10 — vendor an ark-ff 0.4.2 with the `const_helpers.rs` two-line
# debug_assert relaxation patch.  ark-ff 0.4.2 (and 0.5.0) ships an
# over-strict `debug_assert!(num_bytes > 8 * (N - 1), "index too small")`
# in both `write_up_to` and `read_exact_up_to` that fires on valid
# 1-limb Goldilocks `serialize_compressed` calls (N=1, num_bytes
# legitimately 0..8).  Release strips the assert; the body is
# correct.  See memory `feedback_ark_ff_042_debug_assert_blocker.md`
# for the diagnosis trail and portable 4-step fix pattern.
[patch.crates-io]
ark-ff = { path = "vendor/ark-ff-0.4.2" }
