[package]
name = "deep_ali"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DEEP-ALI and FRI scaffolding"
repository = "https://example.com/your/repo"

[features]
default    = []
parallel = ["dep:rayon"]
fri_bench_log = []
sha3-256   = ["hash/sha3-256",   "merkle/sha3-256",   "transcript/sha3-256"]
sha3-384   = ["hash/sha3-384",   "merkle/sha3-384",   "transcript/sha3-384"]
sha3-512   = ["hash/sha3-512",   "merkle/sha3-512",   "transcript/sha3-512"]
blake3-hash = ["hash/blake3-hash", "merkle/blake3-hash", "transcript/blake3-hash"]
# P6.3: gates ECDSA-p256 tests that depend on dust-stark-only merge wrappers
# (deep_ali_merge_p256_ecdsa_streaming, trace_import::lde_trace_columns).
# These are bench tests already #[ignore]'d; the gate keeps the lib build
# clean until the wrappers are ported.
p256-merge-helpers = []

# P6.4: ML-DSA-v2 NIST PQ level selection — mutually exclusive.
# mldsa-44 = NIST L1 (λ=128), mldsa-65 = L3 (λ=192), mldsa-87 = L5 (λ=256).
# Exactly one must be enabled when the ML-DSA AIRs are used.
mldsa-44 = []
mldsa-65 = []
mldsa-87 = []

# P6.4: gates ML-DSA tests that depend on dust-stark-only helpers
# (trace_import::lde_trace_columns, stark_level, sub_air_with_trace,
# binding_cells_commit, deep_ali_merge_ml_dsa_*).  Same pattern as
# p256-merge-helpers — bench/integration tests gated, lib unaffected.
mldsa-merge-helpers = []

[dependencies]
ark-ff = { version = "0.4.2" }
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"
rayon = { version = "1.10", optional = true }
hash      = { path = "../hash",      default-features = false }
merkle    = { path = "../merkle",    default-features = false }
transcript = { path = "../transcript", default-features = false }
poseidon = { path = "../poseidon" }
ark-goldilocks = { path = "../ark-goldilocks" }
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"
sha3 = "0.10"



[dev-dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"
curve25519-dalek = "4.1"